Fix: Authentication (v2) pages not scrollable when custom scrollbars disabled

--- a/src/app/main/content/pages/authentication/forgot-password-2/forgot-password-2.component.scss
+++ b/src/app/main/content/pages/authentication/forgot-password-2/forgot-password-2.component.scss
@@ -34,6 +34,7 @@
         }
 
         #forgot-password-form-wrapper {
+            overflow: auto;
             width: 400px;
             min-width: 400px;
             max-width: 400px;
