--- a/src/app/main/content/pages/authentication/register-2/register-2.component.scss
+++ b/src/app/main/content/pages/authentication/register-2/register-2.component.scss
@@ -34,6 +34,7 @@
         }
 
         #register-form-wrapper {
+            overflow: auto;
             width: 400px;
             min-width: 400px;
             max-width: 400px;
